fix cut off viewport on mobile browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 html {
   background-color: #2b3a4f;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 html, body {
