--- a/src/components/moreinfo.css
+++ b/src/components/moreinfo.css
@@ -38,7 +38,7 @@ h3 {
 
 .main-caption {
     background-color: transparent;
-    min-height: 100vh;
+    min-height: 100dvh;
     width: 100%;
     display: flex;
     flex-direction: column;
